Kexi: Fix detection of primary key column on CSV import

BUG:351487
FIXED-IN:2.9.7

Also:
* fix updates of primary key detection when value of 'Start at line' changes
* simplify some code

Test Plan:
Attached to https://bugs.kde.org/show_bug.cgi?id=351487:
* mussweg_1.csv - test passed
* mussweg_2.csv - test showing error in row #22, details: https://bugs.kde.org/show_bug.cgi?id=351487#c5
* simple-err.csv - minimal test showing the bug (PK is detected); after the fix PK should not be detected

Reviewers: piggz

Subscribers: Kexi-Devel-list

Differential Revision: https://phabricator.kde.org/D267